Z-index fixed, marker.addListener

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ html, body {
 
 #map {
     height: 100%;
-    z-index: -1;
 }
 
 .search {
@@ -15,6 +14,7 @@ html, body {
     left: 25px;
     width: 20%;
     height: auto;
+    z-index: 1;
 }
 
 .pictures {
@@ -23,6 +23,7 @@ html, body {
     right: 25px;
     width: 25%;
     height: auto;
+    z-index: 1;
 }
 
 .pointer {
